--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 asttokens==2.0.5
+attrs==21.4.0
+autopep8==1.6.0
 backcall==0.2.0
 cycler==0.11.0
 debugpy==1.6.0
@@ -7,6 +9,7 @@ entrypoints==0.4
 executing==0.8.3
 fonttools==4.33.2
 h5py==3.6.0
+iniconfig==1.1.1
 ipykernel==6.13.0
 ipython==8.2.0
 jedi==0.18.1
@@ -24,15 +27,19 @@ parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.1.0
+pluggy==1.0.0
 prompt-toolkit==3.0.29
 psutil==5.9.0
 ptyprocess==0.7.0
 pure-eval==0.2.2
+py==1.11.0
+pycodestyle==2.8.0
 Pygments==2.11.2
 pyparsing==3.0.8
 PyQt5==5.15.6
 PyQt5-Qt5==5.15.2
 PyQt5-sip==12.10.1
+pytest==7.1.1
 python-dateutil==2.8.2
 pytz==2022.1
 pyzmq==22.3.0
@@ -42,6 +49,8 @@ six==1.16.0
 sklearn==0.0
 stack-data==0.2.0
 threadpoolctl==3.1.0
+toml==0.10.2
+tomli==2.0.1
 tornado==6.1
 traitlets==5.1.1
 wcwidth==0.2.5
